# arima_predictors

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: README.md  main.py  pyproject.toml  requirements.txt
app/containers/: arima_container.py
app/datasets/: readme.md
app/interfaces/: prediction_service_interface.py  repository_interface.py
app/models/: data_models.py  prediction_model.py
app/repositories/: model_prediction_repository.py
app/routers/: arima_router.py  health_check.py
app/services/: arima_prediction_service.py  data_preparation_service.py  top_product_service.py
app/settings/: config.py
app/use_cases/: train_arima_model_use_case.py
